# PLMControl-master--work-

./: .gitignore  README.md  compile command.txt  config_main.json  config_paths.json  config_plm.json  config_plm_m.json  export_pressure.py  journal_ui.ui  main.py  plm_control_panel.py  pyproject.toml  qdoubleslider.py  requirements.txt  start_experiment_dialog.py  test_ui.py
handlers/: database_handler.py  instruments_handler.py  mqtt_client.py  postgres_handler.py
plm_control/Experiments/: data_aggr.json
plm_control/app/: config_main.json
test/: pres.py
ui/: journal_dialog.ui  plm_ui_2k.ui  settings_dialog.ui  start_experiment_dialog.ui  test_analysis.ui  test_global.ui  test_ui.ui  testgraph.ui
vacuumeter/: erstvak.py
Новая папка/: ddd.py
