[project]
name = "plmcontrol"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "altgraph==0.17.5",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "deprecation==2.1.0",
    "greenlet==3.2.4",
    "hightime==1.0.0",
    "idna==3.11",
    "nidaqmx==1.3.0",
    "nitypes==1.1.0.dev0",
    "numpy==2.3.5",
    "packaging==25.0",
    "paho-mqtt==2.1.0",
    "pefile==2024.8.26",
    "pyinstaller==6.17.0",
    "pyinstaller-hooks-contrib==2025.10",
    "pymodbus==3.11.4",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.1",
    "pyqtgraph==0.14.0",
    "pyserial==3.5",
    "python-decouple==3.8",
    "pyvisa==1.15.0",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.5",
    "sqlalchemy==2.0.44",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
]
